Fix ready wrapper z-index

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,6 +1,6 @@
 .readyWrapper {
   position: fixed;
-  z-index: 12;
+  z-index: 50;
   top: 0;
   left: 0;
   width: 100%;
